add content to gitignore about pycache

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-venv
+# Entornos virtuales
+venv/
+env/
+ENV/
+virtualenv/
+.env/
+.venv/
+# Archivos de Python
+__pycache__/
+# Archivos de IDE
+.vscode/
+.idea/
